--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="game-1.html">
         1 jugador
       </a>
-      <a href="game-2.html">
+      <a href="#">
         2 jugadors
       </a>
       <a href="#">
