--- a/game-1.html
+++ b/game-1.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <a href="../"><img src="assets/icons/home.svg" alt="Home button"></a>
+    <a href="./"><img src="assets/icons/home.svg" alt="Home button"></a>
     <h1>1 jugador</h1>
     <div id="timer">00:00</div>
   </header>
@@ -30,7 +30,7 @@
     <div>
       <h2>Enhorabona!</h2>
       <div>Has acabat la partida en <span id="end-time"></span></div>
-      <a class="main-page-button" href="index.html">Torna a la pàgina principal</a>
+      <a class="main-page-button" href="./">Torna a la pàgina principal</a>
     </div>
   </div>
   <script src="assets/js/memory.js"></script>
