2 players done and rematch option

--- a/game-1.html
+++ b/game-1.html
@@ -30,6 +30,7 @@
     <div>
       <h2>Enhorabona!</h2>
       <div>Has acabat la partida en <span id="end-time"></span></div>
+      <a class="main-page-button" href="javascript:resetMatch()">Repeteix la partida</a>
       <a class="main-page-button" href="./">Torna a la pàgina principal</a>
     </div>
   </div>
