--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
       <a href="game-1.html">
         1 jugador
       </a>
-      <a href="#">
+      <a href="game-2.html">
         2 jugadors
       </a>
-      <a href="#">
+      <a href="javascript:alert('Aquest mode encara no està implementat. Disulpeu les molèsties...')">
         1 jugador contra l'ordinador
       </a>
-      <a href="#">
+      <a href="javascript:alert('Aquest mode encara no està implementat. Disulpeu les molèsties...')">
         1 jugador online
       </a>
     </nav>
