Improve main page UI

--- a/index.html
+++ b/index.html
@@ -9,22 +9,29 @@
 </head>
 <body>
   <header>
+    <img src="assets/icons/memory.png" alt="Memory logo">
     <h1>Memory</h1>
+    <img src="assets/icons/memory.png" alt="Memory logo">
   </header>
   <main>
     <h2>Selecciona un mode de joc per començar:</h2>
     <nav>
       <a href="game-1.html">
-        1 jugador
+        <img src="assets/icons/user.svg" alt="User icon">
+        <div>1 jugador</div>
+        
       </a>
       <a href="game-2.html">
-        2 jugadors
+        <img src="assets/icons/users.svg" alt="Users icon">
+        <div>2 jugadors</div>
       </a>
       <a href="javascript:alert('Aquest mode encara no està implementat. Disulpeu les molèsties...')">
-        1 jugador contra l'ordinador
+        <img src="assets/icons/robot.svg" alt="Robot icon">
+        <div>1 jugador contra l'ordinador</div>
       </a>
       <a href="javascript:alert('Aquest mode encara no està implementat. Disulpeu les molèsties...')">
-        1 jugador online
+        <img src="assets/icons/cloud.svg" alt="Cloud icon">
+        <div>Mode online</div>
       </a>
     </nav>
   </main>
