--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Memory</title>
-
+  <link rel="manifest" href="manifest.json" />  
+  <script>navigator.serviceWorker.register("service-worker.js")</script> 
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
