--- a/game-2.html
+++ b/game-2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>2 jugadors - Memory</title>
-
+  <link rel="icon" href="assets/icons/memory.png">
   <link rel="stylesheet" href="assets/css/game.css">
   <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
 </head>
@@ -15,10 +15,10 @@
     <div id="timer">00:00</div>
   </header>
   <main id="board"></main>
-  <div id="dificulty-box">
+  <div id="difficulty-box">
     <div>
       <div>Selecciona la dificultat:</div>
-      <div class="dificulty-selector">
+      <div class="difficulty-selector">
         <div onclick="startGame(3)">3x3</div>
         <div onclick="startGame(4)">4x4</div>
         <div onclick="startGame(5)">5x5</div>
