--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Memory</title>
   <link rel="manifest" href="manifest.json" />  
   <script>navigator.serviceWorker.register("service-worker.js")</script> 
+  <link rel="icon" href="assets/icons/memory.png">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -26,7 +27,7 @@
         <img src="assets/icons/users.svg" alt="Users icon">
         <div>2 jugadors</div>
       </a>
-      <a href="javascript:alert('Aquest mode encara no està implementat. Disulpeu les molèsties...')">
+      <a href="game-ia.html">
         <img src="assets/icons/robot.svg" alt="Robot icon">
         <div>1 jugador contra l'ordinador</div>
       </a>
