--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <img src="assets/icons/robot.svg" alt="Robot icon">
         <div>1 jugador contra l'ordinador</div>
       </a>
-      <a href="javascript:alert('Aquest mode encara no està implementat. Disulpeu les molèsties...')">
+      <a href="game-online.html">
         <img src="assets/icons/cloud.svg" alt="Cloud icon">
         <div>Mode online</div>
       </a>
