--- a/game-1.html
+++ b/game-1.html
@@ -28,10 +28,14 @@
   </div>
   <div class="end-box" id="end-box">
     <div>
-      <h2>Enhorabona!</h2>
-      <div>Has acabat la partida en <span id="end-time"></span></div>
-      <a class="main-page-button" href="javascript:resetMatch()">Repeteix la partida</a>
-      <a class="main-page-button" href="./">Torna a la pàgina principal</a>
+      <div>
+        <h2>Enhorabona!</h2>
+        <div class="end-info">Has acabat la partida en <span id="end-time"></span></div>
+      </div>
+      <div class="end-box-buttons">
+        <a href="javascript:resetMatch()">Repeteix la partida</a>
+        <a href="./">Torna a la pàgina principal</a>
+      </div>
     </div>
   </div>
   <script src="assets/js/memory.js"></script>
