--- a/game-2.html
+++ b/game-2.html
@@ -28,16 +28,20 @@
   </div>
   <div class="end-box" id="end-box">
     <div>
-      <h2>Enhorabona!</h2>
-      <div id="winner-box">Ha guanyat el/la jugador/a <b><span id="winner"></span></b></div>
-      <div id="tie-box">Heu empatat!</div>
       <div>
-        <div><b>Parelles jugador/a 1: </b><span id="first-player-pairs"></span></div>
-        <div><b>Parelles jugador/a 2: </b><span id="second-player-pairs"></span></div>
+        <h2>Enhorabona!</h2>
+        <div class="end-info" id="winner-box">Ha guanyat el/la jugador/a <b><span id="winner"></span></b></div>
+        <div class="end-info" id="tie-box">Heu empatat!</div>
+        <div>
+          <div class="end-info"><b>Parelles jugador/a 1: </b><span id="first-player-pairs"></span></div>
+          <div class="end-info"><b>Parelles jugador/a 2: </b><span id="second-player-pairs"></span></div>
+        </div>
+        <div class="end-info">Heu acabat la partida en <span id="end-time"></span></div>
       </div>
-      <div>Heu acabat la partida en <span id="end-time"></span></div>
-      <a class="main-page-button" href="javascript:resetMatch()">Repeteix la partida</a>
-      <a class="main-page-button" href="./">Torna a la pàgina principal</a>
+      <div class="end-box-buttons">
+        <a href="javascript:resetMatch()">Repeteix la partida</a>
+        <a href="./">Torna a la pàgina principal</a>
+      </div>
     </div>
   </div>
   <script src="assets/js/memory-2.js"></script>
